===== next =====

  * Remove deprecated lwt.top library.

===== 2.4.6 (2014-10-12) =====

  * Add a ppx syntax extension
  * Add a ?fd argument to
    Lwt_io.{open_connection,with_connection,establish_server}.
  * Fix stub for getaddrinfo and getprotobyname
  * Windows fix: don't throw an exception in the notification handler
    if we're shutting down
  * Fix include file search in ./configure
  * ./configure fixes for windows
  * Fix: use sys_exit instead of exit when Unix.execv fails

===== 2.4.5 (2014-04-21) =====

  * Lwt_ssl: expand API to allow setting socket options with Ssl
    functions
  * fix for camlp4 trunk
  * support for React 1.0.0
  * add Lwt_sequence.find_node_* functions
  * Lwt_log: get backtrace early to overcome exns in
    Printexc.to_string
  * fix potential deadlock in lwt_unix_recv_notifications
  * lwt.glib fixes:
    - handle HUP
    - fix for BSD/OSX
  * do not raise an exception in Lwt_log if argv[0] is blank

===== 2.4.4 (2013-10-22) =====

  * add Android support
  * fix issues in stubs for Lwt_unix jobs
  * fix compatibility issue with OCaml 4.01
  * fix the stub for ev_timer_init
  * add Lwt.log containing Lwt_log_core, the Unix-free part of Lwt_log
  * add Lwt_ssl.get_fd
  * fix stdout/stderr redirections in Lwt_daemon.daemonize
  * add Lwt_list.{map,iter}i{_s,_p}

===== 2.4.3 (2012-12-27) =====

  * fix Lwt_ssl.{in,out}_channel_of_descr: shutdown and close the
    socket when the channel is closed

===== 2.4.2 (2012-09-28) =====

  * fix the stub for Lwt_unix.readdir
  * change the default method for Lwt_glib.install
    (use the glib main loop by default: more portable)
  * ignore invalid file descriptors returned by glib
    (like the emulation of select in glib does)
  * use environment variables in discover.ml
    - use LIBRARY_PATH and C_INCLUDE_PATH for searching headers
    - allow to pass flags for a library in <LIB>_CLFAGS and <LIB>_LIBS
  * add Lwt_unix.on_signal_full

===== 2.4.1 (2012-08-22) =====
