@@ -1,6 +1,8 @@
 ===== next =====
 
   * Remove deprecated lwt.top library.
+  * Remove deprecated Lwt_signal and Lwt_event modules from
+    lwt.react.
 
 ===== 2.4.6 (2014-10-12) =====
 
